--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Reda Abdelwahd Abderrahim",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
   }
